# RayTracer.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Color.h  Defaults.h  Image.h  Light.h  Material.h  Object.h  Plane.h  Ray.h  RayTracer.h  Scene.h  Sphere.h  Triangle.h  Vec3.h  raytrace_features.h
src/: Image.cpp  Light.cpp  Main.cpp  Main.cpp.materialdemo  Material.cpp  Object.cpp  Plane.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp
